Bug 161203 - REGRESSION(204917): RELEASE_ASSERT in ResourceUsageThread::platformThreadBody when ASan is enabled
Summary: REGRESSION(204917): RELEASE_ASSERT in ResourceUsageThread::platformThreadBody...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andreas Kling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2016-08-25 12:33 PDT by Andreas Kling
Modified: 2016-08-25 14:59 PDT (History)
5 users (show)

See Also:


Attachments
Proposed patch (3.53 KB, patch)
2016-08-25 13:58 PDT, Andreas Kling
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kling 2016-08-25 12:33:20 PDT
<rdar://problem/28011251>
Comment 1 Andreas Kling 2016-08-25 13:58:29 PDT
Created attachment 287009 [details]
Proposed patch

This patch removes the assertions (and fixes an oversight in the HTMLCanvasElement external memory reporting.)
The assertions can't be guaranteed to hold given that the current accounting is known to be inexact.
Comment 2 Joseph Pecoraro 2016-08-25 14:03:03 PDT
Comment on attachment 287009 [details]
Proposed patch

r=me
Comment 3 WebKit Commit Bot 2016-08-25 14:59:00 PDT
Comment on attachment 287009 [details]
Proposed patch

Clearing flags on attachment: 287009

Committed r204987: <http://trac.webkit.org/changeset/204987>
Comment 4 WebKit Commit Bot 2016-08-25 14:59:06 PDT
All reviewed patches have been landed.  Closing bug.