REGRESSION: RELEASE_ASSERT in ResourceUsageThread::platformThreadBody when ASan is enabled <https://webkit.org/b/161203> <rdar://problem/28011251>

Reviewed by Joseph Pecoraro.

* page/cocoa/ResourceUsageThreadCocoa.mm:
(WebCore::ResourceUsageThread::platformThreadBody): Remove overly optimistic assertions about
"GC owned" memory never being higher than total malloc memory usage. This accounting is not
really exact and pretending otherwise will just lead to crashes.

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::externalMemoryCost): Hook up HTMLCanvasElement to the ImageBuffer
helper for reporting external memory cost. This makes accounting slightly more correct.


Canonical link: https://commits.webkit.org/179367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204987 268f45cc-cd09-0410-ab3c-d52691b4dbfc