Source/WebCore/html/HTMLCanvasElement.cpp
@@ -582,7 +582,7 @@ size_t HTMLCanvasElement::externalMemoryCost() const
 {
     if (!m_imageBuffer)
         return 0;
-    return 4 * m_imageBuffer->internalSize().width() * m_imageBuffer->internalSize().height();
+    return m_imageBuffer->externalMemoryCost();
 }
 
 void HTMLCanvasElement::setUsesDisplayListDrawing(bool usesDisplayListDrawing)
